@@ -63,6 +63,16 @@ YeaSoft International</property>
       </object>
     </child>
     <child>
+      <object class="GtkMenuItem" id="connectionitem">
+        <property name="use_action_appearance">False</property>
+        <property name="visible">True</property>
+        <property name="sensitive">False</property>
+        <property name="can_focus">False</property>
+        <property name="label" translatable="yes">localhost:8888</property>
+        <property name="use_underline">True</property>
+      </object>
+    </child>
+    <child>
       <object class="GtkMenuItem" id="statusitem">
         <property name="use_action_appearance">False</property>
         <property name="visible">True</property>
