@@ -140,7 +140,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkButton" id="button6">
+              <object class="GtkButton" id="addfolder_choose">
                 <property name="label" translatable="yes">Choose</property>
                 <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
